--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="Shop.html">Shop</a></li>
-                <li><a href="Blog.html">Blog</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="Contact.html">Contact Us</a></li>
-                <li id="lg-bag"><a href="Cart.html"><i class="ri-shopping-cart-fill"></i></a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="ri-shopping-cart-fill"></i></a></li>
                 <a href="#"id="close"><i class="ri-close-line"></i></a>
             </ul>
         </div>
          <div id="mobile">
-            <a href="Cart.html"><i class="ri-shopping-cart-fill"></i></a>
+            <a href="cart.html"><i class="ri-shopping-cart-fill"></i></a>
             <i id="bar" class="ri-menu-2-line"></i>
 
          </div>
