--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,16 @@
         <div>
             <ul id="navbar">
                 <li><a  href="index.html">Home</a></li>
-                <li><a  href="Shop.html">Shop</a></li>
-                <li><a  href="Blog.html">Blog</a></li>
+                <li><a  href="shop.html">Shop</a></li>
+                <li><a  href="blog.html">Blog</a></li>
                 <li><a  href="About.html">About</a></li>
-                <li><a class="active" href="Contact.html">Contact Us</a></li>
-                <li id="lg-bag"><a href="Cart.html"><i class="ri-shopping-cart-fill"></i></a></li>
+                <li><a class="active" href="contact.html">Contact Us</a></li>
+                <li id="lg-bag"><a href="cart.html"><i class="ri-shopping-cart-fill"></i></a></li>
                 <a href="#"id="close"><i class="ri-close-line"></i></a>
             </ul>
         </div>
          <div id="mobile">
-            <a href="Cart.html"><i class="ri-shopping-cart-fill"></i></a>
+            <a href="cart.html"><i class="ri-shopping-cart-fill"></i></a>
             <i id="bar" class="ri-menu-2-line"></i>
 
          </div>
@@ -157,4 +157,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
