--- a/shop.html
+++ b/shop.html
@@ -360,7 +360,7 @@
             <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-            <p>@ 2024 , Prroject - HTML CSS JAVASCRIPT</p>
+            <p>@ 2024 , Project - HTML CSS JAVASCRIPT</p>
         </div>
 
     </footer>
@@ -370,3 +370,4 @@
 </body>
 
 </html>
+
